fixed some bugs and removed the options menu because its obsolete